src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceOptionalBoundsAreInterfaces.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.interfaces;

import java.util.ArrayList;
import java.lang.String;

public interface InterfaceOptionalBoundsAreInterfaces<T extends String & ArrayList<String>> {


}
